@@ -1,0 +1,9 @@
+Title: Roles: Aliases are now unique during cloning
+Level: 1
+Component: wato
+Compatible: compat
+Version: 1.4.0i2
+Date: 1475225899
+Class: fix
+
+
