@@ -2,6 +2,9 @@
     Checks & Agents:
     * 3894 FIX: mkeventd_status: Fixed bug in case Event Console is not running
 
+    WATO:
+    * 3914 FIX: Roles: Aliases are now unique during cloning
+
 
 1.4.0i1:
     Core & Setup:
